⬆️ Bump "final" version of the report in french

--- a/s7/report/Implementation.tex
+++ b/s7/report/Implementation.tex
@@ -5,11 +5,12 @@ L’implémentation a été réalisée en \textbf{langage C++}. Ce choix a été
 
 \section{Structure du code}
 
+Le code fait l'objet d'une documentation extensive, disponible en ligne. \cite{Leroy_doc}
 L'implémentation utilise largement la \textbf{programmation orientée objet}, en définissant des classes pour les objets manipulés. Les classes principales sont les suivantes, du plus bas au plus haut niveau :
 \begin{itemize}
   \item Intervalles réels (quelconques, de réels positifs ou modulo $2\pi$), et complexes (cartésiens ou polaires)
   \item \textbf{Diagrammes} (par défaut, additifs et abstraits)
-  \item Les branches, qui contiennent un lien (\textbf{pointeur}) vers un digramme de destination et un intervalle complexe, et dont la définition typée par la hauteur est mutuellement récursive avec celle des diagrammes
+  \item Les branches, qui contiennent un lien (\textbf{pointeur}) vers un digramme de destination et un intervalle complexe (cartésien ou polaire)
 \end{itemize}
 
 Les classes et fonctions sont organisées en \textbf{espaces de noms} (\textit{namespaces}) pour éviter les conflits de noms, et définies dans des fichiers séparés. Des fonctions de \textbf{réduction} servent ensuite à réduire les diagrammes, en utilisant les fonctions de sélection.
@@ -30,12 +31,16 @@ Cet interpréteur peut aussi fonctionner en mode interactif, c'est-à-dire en li
 
 Le QASM étant déjà un langage de description de circuits quantiques, il n'a pas été jugé nécessaire de réaliser véritable compilateur comportant un front-end, un middle-end réalisant des optimisations et un back-end transformant la représentation intermédiaire en exécutable. L'interpréteur a été testé avec succès sur plusieurs exemples de circuits quantiques.
 
+L'exemple du programme \ref{lst:QASM} s'exécute en 2,6 ms. Des \textbf{benchmarks} sur un plus grand nombre de qubits, ou sur des circuits plus complexes, n'ont pas été réalisés. De plus il est probable qu'une partie non négligeable du temps d'exécution soit due à la lecture du fichier ou à l'interprétation du QASM, et non à la génération du diagramme et à sa modification.
+
 \section{Outils}
 
 Le code source est versionné à l'aide du logiciel \textit{Git}, et est disponible sur la plateforme \textit{GitHub}. \cite{Git} \cite{GitHub} \cite{Leroy_2025} Ce projet fait l'objet d'une \textbf{intégration continue} utilisant \textit{GitHub Actions}, automatisant la validation des tests.
 
-Ce semestre a vu l'arrivée de l'utilisation de \textit{Clang} comme compilateur à la place de \textit{GCC}, et de \textit{Ninja} à la place de \textit{Make}. \cite{Clang} \cite{Ninja} Ces outils sont orchestrés par \textit{CMake}. \cite{CMake}
+Ce semestre a vu l'arrivée de l'utilisation de \textit{Clang} comme compilateur à la place de \textit{GCC}, et de \textit{Ninja} à la place de \textit{Make}. \cite{Clang} \cite{Ninja}
+Ces changements ont permis de réduire le temps de compilation, et d'améliorer la lisibilité des messages d'erreur, ainsi que de faciliter l'utilisation de fonctionnalités récentes du langage (datant de C++23).
+Ces outils sont orchestrés par \textit{CMake}. \cite{CMake}
 
-Compiler le projet (tests exclus) prend environ 8 secondes sur un ordinateur portable récent. Il faut 5 secondes supplémentaires pour compiler les tests.
+Compiler le projet (tests exclus) prend environ 8 secondes sur un ordinateur portable récent. Il faut 5 secondes supplémentaires pour compiler les tests. Le projet compte environ 5 000 lignes de code, dont environ 1 000 lignes de tests.
 
 Le projet fait aussi l'objet d'une \textbf{documentation}, écrite dans les commentaires des fichiers d'en-tête. Les pages web de documentation sont générées automatiquement par \textit{Doxygen}. \cite{Doxygen} et publiée automatiquement sur \textit{GitHub Pages} à chaque modification à l'aide de \textit{GitHub Actions}. \cite{Leroy_doc}
