--- a/s7/report/main.tex
+++ b/s7/report/main.tex
@@ -6,8 +6,7 @@
 \usepackage[utf8]{inputenc}
 
 \usepackage[sorting=none]{biblatex}
-%choix du style de la biblio
-% \bibliographystyle{plain}
+\usepackage{csquotes}
 \bibliography{bibliographie}
 
 
