🌐 Translate Titre and Introduction

--- a/s7/report-en/Titre.tex
+++ b/s7/report-en/Titre.tex
@@ -10,12 +10,12 @@
 % Title
 \HRule \\[0.4cm]
 
-{\huge \bfseries Autour des Diagrammes de Décision Quantiques\\
+{\huge \bfseries Around Quantum Decision Diagrams\\
 [0.4cm] }
 
-{\large \bfseries Rapport -- Parcours recherche -- Projet S7\\[0.4cm] }
-{\large \bfseries \textsl{Élève : Malo \textsc{Leroy}}\\ }
-{\large \bfseries \textsl{Encadrant : Renaud \textsc{Vilmart}}\\[0.4cm] }
+{\large \bfseries Report -- Research Track -- Semester 7\\[0.4cm] }
+{\large \bfseries \textsl{Student : Malo \textsc{Leroy}}\\ }
+{\large \bfseries \textsl{Supervisor : Renaud \textsc{Vilmart}}\\[0.4cm] }
 
 
 \HRule \\[1.5cm]
@@ -28,6 +28,6 @@
 \vfill
 
 % Bottom of the page
-{\large {17 février 2025}}
+{\large {February 17${}^\text{th}$ 2025}}
 
 \end{center}
