--- a/s7/report-en/main.tex
+++ b/s7/report-en/main.tex
@@ -2,7 +2,7 @@
 
 %====================== PACKAGES ======================
 
-\usepackage[french]{babel}
+\usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 
 \usepackage[sorting=none]{biblatex}
@@ -164,5 +164,5 @@
 \printbibliography
 
 \HRule \\[0.4cm]
-\hfill{} \textsc{Malo \textsc{Leroy}} -- \textsc{CentraleSupélec} -- 17 février 2025
+\hfill{} \textsc{Malo \textsc{Leroy}} -- \textsc{CentraleSupélec} -- February 17${}^\text{th}$ 2025
 \end{document}
