--- a/s7/report-fr/Introduction.tex
+++ b/s7/report-fr/Introduction.tex
@@ -134,7 +134,7 @@ Il existe de nombreux cas d'utilisation de l'interprétation abstraite \cite{Ros
 Les différents concepts présentés dans l'état de l'art permettent tous d'améliorer la vitesse de calcul ou la taille en mémoire d'une donnée. Il s'agit donc de \textbf{combiner ces concepts} dans ce projet, en ajoutant une dimension supplémentaire, l'additivité : le fait pour un diagramme d'avoir plusieurs fils droits (respectivement gauches), l'interprétation étant que le « fils droit effectif » est la somme des fils droits (respectivement gauches) du diagramme.
 L'objectif du projet était donc de proposer un modèle de diagrammes de décision quantiques abstraits et additifs, et de les simuler pour en étudier les performances en comparaison d'autres modèles.
 
-De manière préliminaire, une étude des intervalles complexes polaires a été réalisée, ce qui n'avait pas été fait jusqu'à présent.
+De manière préliminaire, une étude des intervalles complexes polaires a été réalisée, ce qui n'avait pas été fait dans la litérature jusqu'à présent.
 Un \textbf{modèle} mathématique de la structure de données et de méthodes de réduction ont été formalisés, et des algorithmes de réduction ont été développés pour simplifier ces diagrammes.
 De plus, une des méthodes d'application de portes quantiques aux diagrammes ont été formalisées.
 Une \textbf{implémentation} de ces algorithmes a été réalisée, sans se baser sur des bibliothèques existantes (mis à part pour les tests unitaires).
