--- a/s7/report-en/Introduction.tex
+++ b/s7/report-en/Introduction.tex
@@ -2,32 +2,32 @@
 \label{ch:Introduction}
 
 
-\section{Contexte et objectif}
+\section{Context and objective}
 \label{sec:Contexte}
 
-L'\textbf{informatique quantique} est un domaine en plein essor. Cette technologie permettant de manipuler des qubits à la place des bits qui sont à la base de l'informatique actuelle, ouvrent la voie à des algorithmes plus performants que les algorithmes classiques. Les machines quantiques exécutant ces algorithmes étant encore en développement et d'un coût important, il existe un besoin d'outils de simulation et de vérification d'algorithmes quantiques par des machines classiques. L'objectif de ce projet est de proposer un modèle de la structure de données des diagrammes de décision quantiques additifs abstraits, en s'appuyant sur les travaux existants, et de les simuler pour en étudier les performances.
+\textbf{Quantum computing} is a rapidly expanding field. This technology, which enables qubits to be manipulated instead of the bits that form the basis of today's computing, paves the way for algorithms that are more powerful than conventional ones. As the quantum machines running these algorithms are still under development and costly, there is a need for tools to simulate and verify quantum algorithms using classical machines. The aim of this project is to propose a model of the data structure of abstract additive quantum decision diagrams, based on existing work, and to simulate them in order to study their performance.
 
 
-\section{État de l’art}
+\section{State of the art}
 \label{sec:Etat}
 
 
-\subsubsection*{Informatique quantique}
+\subsubsection*{Quantum computing}
 
-Le premier postulat de la physique quantique, le \textbf{principe de superposition}, énonce que l'espace des états d'un système quantique est un espace de Hilbert. Par conséquent, si un \textit{bit} ne peut classiquement être que dans un état $\ket 0$ ou $\ket 1$, son homologue quantique, le \textbf{qubit}, peut être dans une superposition de ces deux états.
+The first postulate of quantum physics, the \textbf{principle of superposition}, states that the state space of a quantum system is a Hilbert space. Consequently, while a \textit{bit} can classically only be in a $\ket 0$ or $\ket 1$ state, its quantum counterpart, the \textbf{qubit}, can be in a superposition of these two states.
 $$\ket \psi = \alpha \ket 0 + \beta \ket 1$$
 
-\noindent où $\alpha, \beta$ sont des coefficients complexes. Le second postulat, le \textit{principe de mesure}, stipule que lorsqu'un qubit est mesuré, il est projeté sur un des états de base $\ket 0$ ou $\ket 1$ avec une probabilité $|\alpha|^2$ ou $|\beta|^2$ respectivement.
+\noindent where $\alpha, \beta$ are complex coefficients. The second postulate, the \textit{measurement principle}, states that when a qubit is measured, it is projected onto one of the base states $\ket 0$ or $\ket 1$ with probability $|\alpha|^2$ or $|\beta|^2$ respectively.
 
-Les états à $n$ qubits peuvent être représentés par des \textbf{vecteurs} de dimension $2^n$, les états de l'ensemble constitué de deux systèmes étant ceux obtenus par produit tensoriel (\textit{produit de Kronecker}) d'un état du premier système et d'un état du second. C'est ce nombre exponentiel de paramètres complexes pour un état à plusieurs qubits qui rend l'étude classique d'algorithmes quantiques difficile, puisque les états prennent une taille exponentiellement grande en mémoire.
+States with $n$ qubits can be represented by $2^n$-dimensional \textbf{vectors}, the states of the set consisting of two systems being those obtained by tensor product (\textit{Kronecker product}) of a state of the first system and a state of the second. It is this exponential number of complex parameters for a multi-qubit state that makes the classical study of quantum algorithms difficult, since the states take up exponentially large amounts of memory.
 
 \vspace{1em}
 
-Comme en informatique classique, les opérations élémentaires sur la mémoire sont réalisées en informatique quantique par des \textbf{portes}. D'un point de vue mathématique, une porte opérant sur $n$ qubits est couramment représentée par une matrice de taille $2^n \times 2^n$. Appliquer une porte $M$ à un ensemble de qubits $v$ revient alors à multiplier le vecteur d'état par la matrice de la porte.
+As in classical computing, elementary operations on memory are performed in quantum computing by \textbf{gates}. From a mathematical point of view, a gate operating on $n$ qubits is commonly represented by a matrix of size $2^n \times 2^n$. Applying a gate $M$ to a set of qubits $v$ then amounts to multiplying the state vector by the gate matrix.
 
-L'application en parallèle de plusieurs portes sur plusieurs qubits est représentée par le \textbf{produit tensoriel} (produit de Kronecker) des matrices de portes. On note toutefois que l'application de cette manière de portes sur des qubits se fait en un temps exponentiel en fonction du nombre de qubits, ce qui rend l'utilisation naïve d'algorithmes quantiques sur des machines classiques inefficace.
+Parallel application of multiple gates to multiple qubits is represented by the \textbf{tensor product} (Kronecker product) of the gate matrices. It should be noted, however, that the application of gates to qubits in this way takes exponential time as a function of the number of qubits, making the naive use of quantum algorithms on classical machines inefficient.
 
-L'application de portes à des qubits est fréquemment représentée sous forme de \textbf{circuits quantiques}, où les qubits sont représentés par des lignes et les portes par des boîtes.
+The application of gates to qubits is frequently represented as \textbf{quantum circuits}, where qubits are represented by lines and gates by boxes.
 
 \begin{figure}
   \centering
@@ -49,17 +49,17 @@ L'application de portes à des qubits est fréquemment représentée sous forme 
     \draw (s1.center) -- (s2.center);
     \draw (cx2.center) -- (cx.center);
   \end{tikzpicture}
-  \caption{Circuit à 2 qubits avec les portes $H$, $CX$ et $S$}
+  \caption{2-qubits circuit with gates $H$, $CX$ and $S$}
 \end{figure}
 
-N'importe quelle matrice \textit{unitaire} et \textit{réversible} peut être utilisée comme porte quantique. Parmi les portes les plus courantes, on compte la porte de Hadamard ($H$), la porte « non » ($X$), la porte « non contrôlée » ($CX$), ou la porte d'échange ($S$ pour \textit{swap}). Ces portes sont avec d'autres utilisées pour réaliser des algorithmes quantiques, comme l'algorithme de Deutsch-Josza \cite{DJ_1992}, l'algorithme de Grover \cite{Grover_1996}, ou encore celui de Shor \cite{Shor_1997}.
+Any \textit{unitary} and \textit{reversible} matrix can be used as a quantum gate. Among the most common gates are the Hadamard gate ($H$), the “not” gate ($X$), the “controlled not” gate ($CX$), or the swap gate ($S$). These and other gates are used in quantum algorithms such as Deutsch-Josza's \cite{DJ_1992}, Grover's \cite{Grover_1996} and Shor's \cite{Shor_1997}.
 
 \vspace{1em}
 
-Afin de proposer un langage unifié permettant de développer des algorithmes quantiques à partir de portes pouvant être interprété sur n'importe quel matériel, IBM a publié en 2017 le langage de programmation \textbf{Open QASM}. \cite{QASM_2017} On y définit des qubits sur lesquels on applique des portes, et on peut ensuite simuler ou exécuter le programme sur un ordinateur quantique comme sur un ordinateur classique. Le circuit précédent peut par exemple être représenté par le programme \ref{lst:QASM}. :
+To provide a unified language for developing quantum algorithms from gates that can be interpreted on any hardware, IBM released the \textbf{Open QASM} programming language in 2017. \cite{QASM_2017} It defines qubits on which gates are applied, and the program can then be simulated or executed on a quantum computer as on a conventional computer. The preceding circuit can, for example, be represented by the program \ref{lst:QASM}:
 
 \begin{figure}[thp]
-  \renewcommand{\figurename}{Programme}
+  \renewcommand{\figurename}{Program}
   \centering
 \begin{tabular}{c}
 \begin{lstlisting}
@@ -70,15 +70,15 @@ Afin de proposer un langage unifié permettant de développer des algorithmes qu
   s a b;
 \end{lstlisting}
 \end{tabular}
-\caption{Exemple de code Open QASM}
+\caption{Example Open QASM code}
 \label{lst:QASM}
 \end{figure}
 
-\subsubsection*{Diagrammes de décision}
+\subsubsection*{Decision diagrams}
 
-La structure de \textbf{diagramme de décision} est une structure de données développée à partir des années 1970. Elle est depuis devenue largement utilisée en informatique, notamment pour rendre plus compacte la représentation de \textbf{fonctions binaires} \cite{Minato_1996}.
+The \textbf{decision diagram} structure is a data structure developed in the 1970s. It has since become widely used in computer science, in particular to make the representation of binary functions more compact.
 
-Prenons par exemple la fonction binaire $f(x_1, x_2, x_3) = x_1 \lor (x_2 \land x_3)$. La représentation d'une telle fonction se fait dans le cas général à l'aide d'une \textit{table de vérité}, donc dans une taille grandissant exponentiellement par rapport au nombre de variables binaires considéré. On peut utiliser une représentation plus compacte en utilisant un diagramme de décision, comme le montre la \autoref{fig:ExempleDD}, où les fils gauches sont signalés par des flèches pointillées et les fils droits sont signalés par des flèches continues.
+Take, for example, the binary function $f(x_1, x_2, x_3) = x_1 \lor (x_2 \land x_3)$. In the general case, such a function is represented using a \textit{truth table}, i.e. in a size that grows exponentially with the number of binary variables considered. A more compact representation can be achieved using a decision diagram, as shown in \autoref{fig:ExempleDD}, where left-hand children are indicated by dotted arrows and right-hand children by solid arrows.
 
 \begin{figure}
   \renewcommand{\arraystretch}{0.8}% Tighter
@@ -115,33 +115,32 @@ Prenons par exemple la fonction binaire $f(x_1, x_2, x_3) = x_1 \lor (x_2 \land 
   \label{fig:ExempleDD}
 \end{figure}
 
-Les diagrammes de décision prennent avantage de la \textbf{structure} interne de la donnée (ici, une fonction booléenne). On note d'une part que les labels ne sont pas nécessaires pour reconstituer les valeurs prises par la fonction.
-D'autre part, dans le pire des cas, c'est-à-dire celui où la fonction ne possède aucune structure permettant une réduction, la taille du diagramme de décision (son nombre de branches) vaut $2^{n+1} - 2$ ce qui comme le nombre de valeurs $2^n$ à stocker dans une table de vérité, est \textbf{exponentiel} en $n$. Dans le pire cas, les diagrammes de décision ne permettent pas d'amélioration, mais ne sont pas non plus asymptotiquement pire que les tables de vérité.
+Decision diagrams take advantage of the data's internal \textbf{structure} (here, a Boolean function). On the one hand, labels are not needed to reconstruct the values taken by the function.
+On the other hand, in the worst case, i.e. where the function has no structure allowing reduction, the size of the decision diagram (its number of branches) is $2^{n+1} - 2$ which, like the number of values $2^n$ to be stored in a truth table, is \textbf{exponential} in $n$. In the worst case, decision diagrams offer no improvement, but are not asymptotically worse than truth tables either.
 
+\subsubsection*{Abstract interpretation}
 
-\subsubsection*{Interprétation abstraite}
+Abstract interpretation is a general method of dealing with the properties of computer programs by abstracting them. It was introduced by Patrick and Radhia Cousot in 1977 \cite{CousotCousot77-1}. It can also be used to solve problems or compute faster.
 
-L'interprétation abstraite est une méthode générale consistant à traiter des propriétés de programmes informatiques en les abstrayant. Elle a été introduite par Patrick et Radhia Cousot en 1977 \cite{CousotCousot77-1}. Elle peut aussi être utilisée pour résoudre des problèmes ou calculer plus rapidement.
+Consider the following problem: we're trying to determine the sign of the expression $-12 \times 7 - 13$. We could calculate the result of this expression, but we could also note that $-12$ and $-13$ are negative and that 7 is positive, hence $-12 \times 7$ is negative, so the expression is negative. More formally, we've taken the concrete elements $-12$, 7 and $-13$ and replaced them with the abstract elements $\oplus$ “positive” and $\ominus$ “negative”, on which we define sum and product operations according to well-known rules.
 
-Étudions le problème suivant : on cherche à déterminer le signe de  l'expression $-12 \times 7 - 13$. On pourrait calculer le résultat de cette expression, mais on peut aussi remarquer que $-12$ et $-13$ sont négatifs et que 7 est positif, d'où $-12 \times 7$ négatif, ainsi l'expression est négative. Plus formellement, on est parti des \textbf{éléments concrets} que sont $-12$, 7 et $-13$ et on les a remplacés par les \textbf{éléments abstraits} « positif » $\oplus$ et « négatif » $\ominus$, sur lesquels on définit les opérations de somme et de produit selon les règles bien connues.
-
-Il existe de nombreux cas d'utilisation de l'interprétation abstraite \cite{Rosendahl_1995}, pour la compilation de programmes par exemple. Nous l'utiliserons dans ce projet pour simplifier les diagrammes de décision quantiques quitte à perdre une partie de l'information qu'ils contiennent. C'est aussi le cas pour l'exemple précédent : abstraire les éléments par leur signe ne permet pas toujours de déterminer le signe de l'expression.
+There are many uses for the abstract interpretation \cite{Rosendahl_1995}, for example in program compilation. In this project, we'll be using it to reduce quantum decision diagrams, even if this means losing some of the information they contain. This is also the case for the previous example: abstracting elements by their sign does not always allow us to determine the sign of the expression.
 
 
 \section{Contribution}
 \label{sec:Contribution}
 
-Les différents concepts présentés dans l'état de l'art permettent tous d'améliorer la vitesse de calcul ou la taille en mémoire d'une donnée. Il s'agit donc de \textbf{combiner ces concepts} dans ce projet, en ajoutant une dimension supplémentaire, l'additivité : le fait pour un diagramme d'avoir plusieurs fils droits (respectivement gauches), l'interprétation étant que le « fils droit effectif » est la somme des fils droits (respectivement gauches) du diagramme.
-L'objectif du projet était donc de proposer un modèle de diagrammes de décision quantiques abstraits et additifs, et de les simuler pour en étudier les performances en comparaison d'autres modèles.
+The various concepts presented in the state of the art can all be used to improve the computation speed or memory size of a dataset. The aim of this project was therefore to combine these concepts, adding an extra dimension, additivity: the fact that a diagram has several right (respectively left) wires, the interpretation being that the “effective right wire” is the sum of the diagram's right (respectively left) wires.
+The aim of the project was therefore to propose a model of abstract, additive quantum decision diagrams, and to simulate them in order to study their performance in comparison with other models.
 
-De manière préliminaire, une étude des intervalles complexes polaires a été réalisée, ce qui n'avait pas été fait jusqu'à présent.
-Un \textbf{modèle} mathématique de la structure de données et de méthodes de réduction ont été formalisés, et des algorithmes de réduction ont été développés pour simplifier ces diagrammes.
-De plus, une des méthodes d'application de portes quantiques aux diagrammes ont été formalisées.
-Une \textbf{implémentation} de ces algorithmes a été réalisée, sans se baser sur des bibliothèques existantes (mis à part pour les tests unitaires).
+As a preliminary step, a study of polar complex intervals was carried out, which had not been done in the literature until now.
+A mathematical \textbf{model} of the data structure and reduction methods were formalized, and reduction algorithms were developed to reduce these diagrams.
+In addition, methods for applying quantum gates to the diagrams have been formalized.
+An \textbf{implementation} of these algorithms was carried out, without relying on existing libraries (except for unit tests).
 
-\section{Structure du rapport}
+\section{Structure of the report}
 \label{sec:Structure}
 
-Le \autoref{ch:Modele} présente le modèle théorique de diagrammes de décision quantiques qui a été développé, y compris les algorithmes de réduction et d'application de portes qui accompagnent celui-ci. Ensuite, le \autoref{ch:Implementation} discute de l'implémentation réalisée. Finalement, une courte conclusion est présentée dans le \autoref{ch:Conclusion}.
+\autoref{ch:Modele} presents the theoretical model of quantum decision diagrams that has been developed, including the accompanying reduction and gating algorithms. Next, \autoref{ch:Implementation} discusses the implementation carried out. Finally, a short conclusion is presented in \autoref{ch:Conclusion}.
 
-Un document théorique plus complet que ce rapport destiné à être publié et rédigé en anglais, est disponible en ligne. D'éventuels points théoriques succinctement présentés dans ce rapport et ou théorèmes dont la preuve n'est pas spécifiée sont détaillés dans ce document. \cite{Leroy_2025} De plus, une documentation technique du code est disponible en ligne. \cite{Leroy_doc}
+A more complete theoretical document is available online. Some theoretical points succinctly presented in this report, or theorems whose proof is not specified, are detailed in this document. \cite{Leroy_2025} In addition, technical documentation of the code is available online. \cite{Leroy_doc}
